[gd_scene load_steps=53 format=2]

[ext_resource path="res://Characters/Player/Player_Ghost.tscn" type="PackedScene" id=1]
[ext_resource path="res://inventory/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://inventory/inventory_interface.gd" type="Script" id=3]
[ext_resource path="res://inventory/inventory_slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/slumtown_model.tscn" type="PackedScene" id=5]
[ext_resource path="res://skybox/skybox_02.png" type="Texture" id=6]
[ext_resource path="res://gameobjects/FertilizerProducer.tscn" type="PackedScene" id=7]
[ext_resource path="res://item/items/slop_skull.tres" type="Resource" id=8]
[ext_resource path="res://gameobjects/BioGrower.tscn" type="PackedScene" id=9]
[ext_resource path="res://gameobjects/IndustrialSink.tscn" type="PackedScene" id=10]
[ext_resource path="res://gameobjects/vendor.tscn" type="PackedScene" id=11]
[ext_resource path="res://gameobjects/Ladder.tscn" type="PackedScene" id=12]
[ext_resource path="res://item/items/metal_frag.tres" type="Resource" id=13]
[ext_resource path="res://game_end/game_end_stem_cells.gd" type="Script" id=14]
[ext_resource path="res://item/items/prole_suit.tres" type="Resource" id=15]
[ext_resource path="res://item/items/sanitar_suit.tres" type="Resource" id=16]
[ext_resource path="res://gameobjects/resource_node_spawner.tscn" type="PackedScene" id=17]
[ext_resource path="res://gameobjects/resource_nodes/bitumeat.tscn" type="PackedScene" id=18]
[ext_resource path="res://gameobjects/production_machine.tscn" type="PackedScene" id=19]
[ext_resource path="res://fonts/scribbles.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://gameobjects/resource_nodes/skin_tree.tscn" type="PackedScene" id=21]
[ext_resource path="res://gameobjects/Amoeba.tscn" type="PackedScene" id=22]
[ext_resource path="res://role/roles/proletariat.tres" type="Resource" id=23]
[ext_resource path="res://gameobjects/resource_nodes/bone_capsule.tscn" type="PackedScene" id=24]
[ext_resource path="res://item/items/spine.tres" type="Resource" id=25]
[ext_resource path="res://item/items/bio_fuel.tres" type="Resource" id=26]
[ext_resource path="res://item/items/shells.tres" type="Resource" id=27]
[ext_resource path="res://gameobjects/processor.tscn" type="PackedScene" id=28]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=29]
[ext_resource path="res://UI/LoadingScreen.tscn" type="PackedScene" id=30]
[ext_resource path="res://UI/Options.tscn" type="PackedScene" id=31]
[ext_resource path="res://inventory/inventory_data.gd" type="Script" id=32]
[ext_resource path="res://inventory/Storage.tscn" type="PackedScene" id=33]
[ext_resource path="res://item/items/heal_1.tres" type="Resource" id=34]
[ext_resource path="res://item/items/shotgun.tres" type="Resource" id=35]
[ext_resource path="res://gameobjects/rot_telecom.tscn" type="PackedScene" id=36]
[ext_resource path="res://gameobjects/autostitcher.tscn" type="PackedScene" id=37]
[ext_resource path="res://gameobjects/Generator.tscn" type="PackedScene" id=38]
[ext_resource path="res://item/items/9ammo.tres" type="Resource" id=39]
[ext_resource path="res://gameobjects/resource_nodes/boulder.tscn" type="PackedScene" id=40]
[ext_resource path="res://gameobjects/metastabilizer.tscn" type="PackedScene" id=41]
[ext_resource path="res://gameobjects/sawblade.tscn" type="PackedScene" id=42]

[sub_resource type="StyleBoxFlat" id=380]
bg_color = Color( 0, 0, 0, 0.270588 )

[sub_resource type="DynamicFont" id=381]
size = 25
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=382]
size = 35
font_data = ExtResource( 20 )

[sub_resource type="PanoramaSky" id=366]
panorama = ExtResource( 6 )

[sub_resource type="Environment" id=2]
background_sky = SubResource( 366 )
ambient_light_color = Color( 0.807843, 0.807843, 0.807843, 1 )
fog_color = Color( 0.87451, 0.72549, 0.45098, 1 )
fog_depth_begin = 0.0
fog_depth_end = 175.0

[sub_resource type="QuadMesh" id=383]
size = Vector2( 1.5, 5 )

[sub_resource type="QuadMesh" id=384]
size = Vector2( 1.5, 7 )

[sub_resource type="QuadMesh" id=385]
size = Vector2( 1.5, 8 )

[sub_resource type="QuadMesh" id=386]
size = Vector2( 1.5, 14 )

[sub_resource type="Resource" id=387]
resource_local_to_scene = true
script = ExtResource( 32 )
slot_datas = [ null, null, null, null, null, null ]

[node name="Main" type="Spatial"]
script = ExtResource( 14 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 3

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource( 2 )]
margin_left = 30.0
margin_top = 30.0
margin_right = 60.0
margin_bottom = 60.0

[node name="EquipInventory" parent="UI/InventoryInterface" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 30.0
margin_right = 666.0
margin_bottom = 96.0

[node name="WeaponInventory" parent="UI/InventoryInterface" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 200.0
margin_right = 666.0
margin_bottom = 266.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource( 2 )]
visible = false
margin_left = 1200.0
margin_top = 400.0
margin_right = 1230.0
margin_bottom = 430.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource( 4 )]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
self_modulate = Color( 1, 1, 1, 0 )

[node name="PauseMenu" type="Control" parent="UI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 29 )

[node name="Panel" type="Panel" parent="UI/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 380 )

[node name="PauseLabel" type="Label" parent="UI/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.5
margin_top = -11.0
margin_right = 32.5
margin_bottom = 11.0
custom_fonts/font = SubResource( 381 )
text = "paused"

[node name="PanelContainer" type="PanelContainer" parent="UI/PauseMenu"]
margin_left = 830.0
margin_top = 573.0
margin_right = 1082.0
margin_bottom = 711.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/PauseMenu/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 245.0
margin_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu/PanelContainer/MarginContainer"]
margin_right = 238.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="options_button" type="Button" parent="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 238.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 382 )
text = "options"

[node name="spacer" type="Control" parent="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 238.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 15 )

[node name="menu_exit_button" type="Button" parent="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 238.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 382 )
text = "exit to menu"

[node name="spacer2" type="Control" parent="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 238.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 15 )

[node name="exit_button" type="Button" parent="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 238.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 382 )
text = "exit to desktop"

[node name="Options" parent="UI/PauseMenu" instance=ExtResource( 31 )]
visible = false

[node name="LoadingScreen" parent="UI/PauseMenu" instance=ExtResource( 30 )]
visible = false

[node name="LoadingScreen" parent="." instance=ExtResource( 30 )]
visible = false

[node name="Environment" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource( 2 )

[node name="slumtown_model" parent="Environment" instance=ExtResource( 5 )]

[node name="Player_Ghost" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 43, 2, -12 )

[node name="GameObjects" type="Spatial" parent="."]

[node name="player_role_spawns" type="Spatial" parent="GameObjects"]

[node name="prole_spawn_01" parent="GameObjects/player_role_spawns" instance=ExtResource( 42 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 0.1, -40 )
role = ExtResource( 23 )
required_items = [ ExtResource( 8 ) ]
optional_random_items = [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ]
random_amount_of_items_to_give = 2

[node name="BiogrowthObjects" type="Spatial" parent="GameObjects"]

[node name="FertilizerProducer" parent="GameObjects/BiogrowthObjects" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37, 1, 6 )

[node name="IndustrialSink" parent="GameObjects/BiogrowthObjects" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37, 1, 19 )

[node name="BioGrower" parent="GameObjects/BiogrowthObjects" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0, 9 )

[node name="Store" type="Spatial" parent="GameObjects"]

[node name="vendor" parent="GameObjects/Store" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 55, 0, -13 )

[node name="Ladders" type="Spatial" parent="GameObjects"]

[node name="Ladder" parent="GameObjects/Ladders" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49.9, 4, 11.2 )
bounds = Vector3( 0.5, 3, 1 )

[node name="MeshInstance" type="MeshInstance" parent="GameObjects/Ladders/Ladder"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -1, 0 )
mesh = SubResource( 383 )
material/0 = null

[node name="Ladder2" parent="GameObjects/Ladders" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54, 9.5, -14.7 )
bounds = Vector3( 1, 4, 0.25 )

[node name="MeshInstance" type="MeshInstance" parent="GameObjects/Ladders/Ladder2"]
mesh = SubResource( 384 )
material/0 = null

[node name="Ladder3" parent="GameObjects/Ladders" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.8, -9, 4 )
bounds = Vector3( 0.25, 4, 1 )

[node name="MeshInstance" type="MeshInstance" parent="GameObjects/Ladders/Ladder3"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 385 )
material/0 = null

[node name="Ladder4" parent="GameObjects/Ladders" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 60.5, 7, 29.6 )
bounds = Vector3( 0.5, 8, 1 )

[node name="MeshInstance" type="MeshInstance" parent="GameObjects/Ladders/Ladder4"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 386 )
material/0 = null

[node name="WoodedArea" type="Spatial" parent="GameObjects"]

[node name="TreeSpawner" parent="GameObjects/WoodedArea" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, -28 )
node_to_spawn = ExtResource( 21 )

[node name="TreeSpawner2" parent="GameObjects/WoodedArea" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -36 )
node_to_spawn = ExtResource( 21 )

[node name="TreeSpawner3" parent="GameObjects/WoodedArea" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -28 )
node_to_spawn = ExtResource( 21 )

[node name="AmoebaSpawner" parent="GameObjects/WoodedArea" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 1, -31 )
node_to_spawn = ExtResource( 22 )

[node name="ToolFactory" type="Spatial" parent="GameObjects"]

[node name="production_machine" parent="GameObjects/ToolFactory" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 5.5, -23.9 )
input_item_datas = [ ExtResource( 13 ) ]
output_item_datas = [ ExtResource( 16 ), ExtResource( 15 ) ]
machine_name = "tool factory"
payday = 3

[node name="Generator" parent="GameObjects/ToolFactory" instance=ExtResource( 38 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 5.5, -23 )
bounds = Vector3( 4, 1, 1 )

[node name="Canal" type="Spatial" parent="GameObjects"]

[node name="BitumeatSpawner" parent="GameObjects/Canal" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -5 )
node_to_spawn = ExtResource( 18 )
spawn_frequency = 500.0

[node name="BitumeatSpawner2" parent="GameObjects/Canal" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -2 )
node_to_spawn = ExtResource( 18 )
spawn_frequency = 500.0

[node name="BitumeatSpawner3" parent="GameObjects/Canal" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33, 0, -8 )
node_to_spawn = ExtResource( 18 )
spawn_frequency = 500.0

[node name="BoneCapsuleSpawner" parent="GameObjects/Canal" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, -2 )
node_to_spawn = ExtResource( 24 )
spawn_frequency = 500.0

[node name="BoneCapsuleSpawner2" parent="GameObjects/Canal" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, -7 )
node_to_spawn = ExtResource( 24 )
spawn_frequency = 500.0

[node name="ProleSpawn" type="Spatial" parent="GameObjects"]

[node name="processor" parent="GameObjects/ProleSpawn" instance=ExtResource( 28 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 53, 0, -44 )

[node name="Storage" parent="GameObjects/ProleSpawn" instance=ExtResource( 33 )]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 54, 0, -29 )
inventory_data = SubResource( 387 )
item_datas = [ ExtResource( 26 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 27 ), ExtResource( 13 ) ]
reset_time = 120.0
does_reset = true

[node name="rot_telecom" parent="GameObjects/ProleSpawn" instance=ExtResource( 36 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 55, 1, -35 )

[node name="metastabilizer" parent="GameObjects/ProleSpawn" instance=ExtResource( 41 )]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 54, 1, -39 )

[node name="MedicalArea" type="Spatial" parent="GameObjects"]

[node name="autostitcher" parent="GameObjects/MedicalArea" instance=ExtResource( 37 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 1.5, -24.5 )
heal_cost = 50

[node name="WeaponFactory" type="Spatial" parent="GameObjects"]

[node name="production_machine" parent="GameObjects/WeaponFactory" instance=ExtResource( 19 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8.7, 5.5, -30 )
input_item_datas = [ ExtResource( 13 ) ]
output_item_datas = [ ExtResource( 39 ), ExtResource( 27 ), ExtResource( 35 ) ]
machine_name = "weapon factory"
production_time = 5.0
payday = 10

[node name="Generator" parent="GameObjects/WeaponFactory" instance=ExtResource( 38 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -8, 5.5, -25 )
bounds = Vector3( 1, 1, 6 )

[node name="Quarry" type="Spatial" parent="GameObjects"]

[node name="RockSpawner" parent="GameObjects/Quarry" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -56, -15, -27 )
node_to_spawn = ExtResource( 40 )
spawn_frequency = 120.0

[node name="Generator" parent="GameObjects/Quarry" instance=ExtResource( 38 )]
transform = Transform( 0.98106, 0.0871557, -0.172987, -0.0858316, 0.996195, 0.0151344, 0.173648, 0, 0.984808, -42, -20.1, -29 )
bounds = Vector3( 4, 1, 4 )

[node name="production_machine" parent="GameObjects/Quarry" instance=ExtResource( 19 )]
transform = Transform( 0.96225, -0.0871557, 0.257834, 0.084186, 0.996195, 0.0225576, -0.258819, 0, 0.965926, -46, -20.1, -28 )
input_item_datas = [ ExtResource( 8 ) ]
output_item_datas = [ ExtResource( 34 ) ]
machine_name = "lunch factory"
payday = 2

[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_InventoryInterface_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_InventoryInterface_visibility_changed"]
[connection signal="pressed" from="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/options_button" to="UI/PauseMenu" method="_on_options_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/menu_exit_button" to="UI/PauseMenu" method="_on_menu_exit_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/exit_button" to="UI/PauseMenu" method="_on_menu_exit_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/exit_button" to="UI/PauseMenu" method="_on_exit_button_pressed"]
